[package]
name = "darkmagic"
description = "Astrophotography darks processing program"
license = "Apache-2.0"
version = "0.0.0"
repository = "https://github.com/cberner/darkmagic"
authors = ["Christopher Berner <christopherberner@gmail.com>"]
edition = "2018"

[dependencies]
rawloader = {version = "0.36.3", optional = true}
kamadak-exif = "0.5.4"
byteorder = "1.4.3"
clap = "2.33"
env_logger = "0.8"
log = "0.4"

[features]
gpl = ["rawloader"]

[profile.release]
debug = true
